Sun Feb  4 04:18:33 2007  Tim Janik  <timj@gtk.org>

	* updated licenses to GNU Lesser General Public License version 2.1
	with permission from Stefan Westerfeld where required.
	
	* artscompressor.idl, artscompressor.cc:
	relicensed under GNU Lesser General Public License version 2.1
	with permission from Matthias Kretz and Stefan Westerfeld.
	
	* davguitar.c, davxtalstrings.c: updated patent license notice.

Wed Jan 24 23:50:09 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* davxtalstrings.c: Added a small random number generator (from
	rapicorn) to deterministically generate random values if the option
	--bse-disable-randomization is used. This makes it possible to bring
	this module under test properly.

Sat Dec 23 20:53:15 2006  Tim Janik  <timj@gtk.org>

	* bsesummation.idl, bsesummation.cc: added audio-diff output channel 
	which provides a difference signal between it's two output signals.

Mon Dec 18 19:39:46 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* davxtalstrings.c:
	* davsyndrum.c:
	* davcanyondelay.c:
	* bseiirfilter.c:
	* davorgan.c: Spelling fix: the unit for frequencies is spelled
	"Hertz" (not "Herz").

Sun Dec 17 02:18:46 2006  Tim Janik  <timj@gtk.org>

	* davxtalstrings.c:
	dav_xtal_strings_init(): initialize transpose_factor to 0 to uncover late update bugs.
	dav_xtal_prepare(): update config.transpose_factor, using BseSource's musical_tuning.

Sun Dec 17 00:33:34 2006  Tim Janik  <timj@gtk.org>

	* davorgan.c:
	dav_organ_init(): initialize transpose_factor to 0 to uncover late update bugs.
	dav_organ_update_modules(): 
	dav_organ_prepare(): update config.transpose_factor, using BseSource's musical_tuning.

Fri Dec 15 22:47:36 2006  Tim Janik  <timj@gtk.org>

	* bsequantizer.idl:
	* bsequantizer.cc: improved blurb, support fractional quantization 
	steps. adjusted steppings. use nearbyint() for rounding to avoid
	buglets around 32bits.

Fri Dec 15 21:54:21 2006  Tim Janik  <timj@gtk.org>
